--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   background-image: url(../img/natural-default-pattern.png);
   font-family: 'Roboto', sans-serif;;
 }
-
+/* utility selector */
 .container {
   margin: auto;
   width:70%;
@@ -30,7 +30,26 @@ main:after {
   clear: both;
 }
 
+.box {
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 10px;
+}
 
+p {
+  line-height: 30px;
+  padding: 18px;
+}
+
+ul li:hover {
+  background-color: lightgrey;
+}
+
+ul li a:hover {
+  text-decoration: underline;
+}
+
+/* header */
 header {
   width: 100%;
   height: 300px;
@@ -56,12 +75,7 @@ header {
   width: 40%;
 }
 
-h3 {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+/* navigation bar menu */
 .navbar {
   width: 100%;
   height: 50px;
@@ -86,12 +100,20 @@ h3 {
   display: inline-block;
 }
 
-ul li:hover {
-  background-color: lightgrey;
+/* aside */
+aside {
+  width: 20%;
 }
 
-ul li a:hover {
-  text-decoration: underline;
+a .fas {
+  padding: 5px;
+  color: orange;
+  font-size: 30px;
+}
+
+#titol_feed {
+  padding: 1px;
+  display: inline-block;
 }
 
 aside ul li {
@@ -106,33 +128,16 @@ aside li a {
   color: green;
 }
 
-.box {
-  background-color: white;
-  border-radius: 5px;
-  margin-top: 10px;
+aside h2 {
+  padding: 18px;
+  color: grey;
 }
 
-aside {
-  width: 20%;
-}
-
+/* central section */
 .central {
   width: 50%;
   margin-left: 5%;
   margin-right: 5%;
-}
-
-footer {
-  width: 100%;
-  height: 150px;
-  background-color: white;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-p {
-  line-height: 30px;
-  padding: 18px;
 }
 
 .central h2 {
@@ -141,29 +146,22 @@ p {
   text-shadow: 2px 2px 2px  black;
 }
 
-aside h2 {
-  padding: 18px;
-  color: grey;
+/* footer */
+footer {
+  width: 100%;
+  height: 150px;
+  background-color: white;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-#titol_feed {
-  padding: 1px;
-  display: inline-block;
-}
-
-a .fas {
-  padding: 5px;
-  color: orange;
-  font-size: 30px;
-}
-
-h4 {
+h3 {
   font-family: arial;
   font-style: italic;
   color: lightgrey;
   margin-top: 5px;
   font-size: 15px;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px inset grey;
 }
 
 footer i {
